fixed color contrast

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -6,10 +6,10 @@
 }
 
 :root {
-    --primary-color: #4CAF50;
+    --primary-color: #fff;
     --secondary-color: #FF9800;
-    --accent1-color: #2196F3;
-    --accent2-color: #E91E63;
+    --accent1-color: #222;
+    --accent2-color: #111;
     --heading-font: "Times New Roman", "Georgia", serif;
     --body-font: "Arial", "Helvetica", sans-serif;
 }
@@ -57,7 +57,7 @@ nav, p, section, article {
 
 h1, h2 {
     font-family: var(--heading-font);
-    color: var(--primary-color);
+    color: var(--accent2-color);
 }
 
 h1 {
@@ -67,15 +67,15 @@ h1 {
     padding: 5px;
     text-align: center;
     opacity: 0.7;
-    background-color: var(--accent1-color);
-    color: #fff;
+    background-color: var(--primary-color);
+    color: #var(--accent2-color);
 }
 
 .hero article {
     position: absolute;
     top: 47px;
     background-color: var(--secondary-color);
-    color: black;
+    color: var(--accent1-color);
     margin: 0;
     padding: 0;
 }
@@ -148,7 +148,7 @@ footer {
     padding: 0.5rem 0;
     margin-bottom: 2rem;
     background-color: var(--primary-color);
-    color: blue;
+    color: var(--accent1-color);
 }
 
 footer p {
